# dynisland

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  backtrace.txt  build.rs  default.css  default.scss  file.scss  rust-toolchain.toml
.github/workflows/: release.yml
abi/: Cargo.toml
abi/src/: activity_identifier.rs  layout.rs  lib.rs  module.rs
core/: Cargo.toml
core/src/: activity_map.rs  base_module.rs  config_variable.rs  dynamic_activity.rs  dynamic_property.rs
core/src/graphics/: util.rs
core/src/graphics/activity_widget/: boxed_activity_mode.rs  imp.rs  local_css_context.rs  mod.rs  object_subclass_impl.rs
core/src/graphics/activity_widget/layout_manager/: imp.rs
core/src/graphics/widgets/rolling_char/: imp.rs  mod.rs  object_subclass_impl.rs
core/src/graphics/widgets/scrolling_label/: imp.rs  local_css_context.rs  mod.rs  object_subclass_impl.rs
dynisland/: Cargo.toml  build.rs  default.css  default.scss
dynisland-abi/: Cargo.toml
dynisland-abi/src/: activity_identifier.rs  layout.rs  lib.rs  module.rs
dynisland-core/: Cargo.toml
dynisland-core/src/: activity_map.rs  app.rs  base_module.rs  config.rs  config_variable.rs  dynamic_activity.rs  dynamic_property.rs  lib.rs  main.rs  module_abi.rs
dynisland-core/src/filters/: cpu_filter.rs  filter.rs  gpu_filter.rs  mod.rs
dynisland-core/src/graphics/: activity_identifier.rs  activity_map.rs  activity_widget.rs  activity_widget_local_css_context.rs  config_variable.rs  dynamic_activity.rs  dynamic_property.rs  mod.rs  transition.rs  util.rs
dynisland-core/src/graphics/activity_widget/: allocate_and_draw.rs  boxed_activity_mode.rs  imp.rs  local_css_context.rs  mod.rs  widget.rs
dynisland-core/src/graphics/activity_widget/layout_manager/: imp.rs  mod.rs
dynisland-core/src/graphics/animations/: mod.rs  soy.rs  transition.rs
dynisland-core/src/graphics/widgets/: mod.rs  rolling_number.rs  scrolling_label.rs
dynisland-core/src/graphics/widgets/rolling_char/: imp.rs  mod.rs
dynisland-core/src/graphics/widgets/scrolling_label/: imp.rs  local_css_context.rs  mod.rs
dynisland-core/src/modules/: example.rs  mod.rs
dynisland-core/src/shaders/: gaussian_blur.wgsl  merge_alpha.wgsl
dynisland-core/src/widgets/: activity_widget.rs  dynamic_activity.rs  dynamic_property.rs  transition.rs
dynisland-modules/: Cargo.toml
dynisland-modules-old/example-module/: Cargo.toml  default.scss
dynisland-modules-old/music-module/src/: module.rs
dynisland-modules-old/music-module/src/widget/: mod.rs  visualizer.rs
dynisland-modules/example-module/: Cargo.toml
dynisland-modules/example-module/src/: lib.rs  module.rs  widget.rs
dynisland-modules/music-module/: Cargo.toml  default.scss
dynisland-modules/music-module/src/: lib.rs  module.rs  player_info.rs  utils.rs  visualizer.rs  widget.rs
dynisland-modules/music-module/src/widget/: compact.rs  expanded.rs  minimal.rs  mod.rs  visualizer.rs
dynisland-modules/src/: example.rs  lib.rs
dynisland-modules/src/example/: mod.rs  module.rs
dynisland-modules/src/music/: mod.rs  module.rs  player_info.rs
dynisland/src/: app.rs  cli.rs  config.rs  ipc.rs  lib.rs  main.rs  module_loading.rs
dynisland/src/layout_manager/: layout_manager_base.rs  mod.rs  simple_layout.rs  window_position.rs
src/: app.rs  cli.rs  config.rs  filter.rs  ipc.rs  lib.rs  main.rs  module_loading.rs
src/filters/: cpu_filter.rs  filter.rs  gpu_filter.rs  mod.rs
src/layout_manager/: config.rs  fallback_layout.rs  mod.rs  simple_layout.rs  window_position.rs
src/modules/: base_module.rs  example.rs  mod.rs
src/shaders/: gaussian_blur.wgsl
src/widgets/: activity_widget.rs  dynamic_activity.rs  dynamic_property.rs  mod.rs  transition.rs
