[package]
name = "dynisland"
version = "0.1.2"
authors = ["cr3eperall"]
description = "A Dynamic Island bar"
license = "MIT"
repository = "https://github.com/cr3eperall/dynisland"
edition = "2021"
build = "build.rs"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dynisland-core = { git="https://github.com/cr3eperall/dynisland-core.git", version="0.1.1" }
gtk = { version = "0.8.0", package = "gtk4", features = ["v4_12"] }
linkme = { version = "0.3.17" }
tokio = { version = "1.39.0", features = ["rt", "time", "sync", "macros", "io-util", "net"] }
anyhow = "1.0.86"
serde = { version = "1.0.188", features = ["serde_derive"] }
env_logger = "0.11.2"
abi_stable = "0.11.3"
grass={version = "0.13.4", default-features = false, features = ["macro"]}

notify = { version = "6.1.1", features = ["fsevent-sys"] }
# colored = "2.1.0"
clap = { version = "4.5.15", features = ["derive"]}
nix = { version = "0.29.0", features = ["process", "fs"]}
bincode = { version = "1.3.3"}

dynisland_clock_module = { git = "https://github.com/cr3eperall/dynisland-modules.git", version="0.1.0", features = ["embedded"], optional = true}
dynisland_dynamic_layoutmanager ={ git = "https://github.com/cr3eperall/dynisland-modules.git", version="0.1.0", features = ["embedded"], optional = true}
dynisland_music_module = { git = "https://github.com/cr3eperall/dynisland-modules.git", version="0.1.0", features = ["embedded"], optional = true}
dynisland_script_module = { git = "https://github.com/cr3eperall/dynisland-modules.git", version="0.1.0", features = ["embedded"], optional = true}


[build-dependencies]
clap = {version = "4.5.15", features = ["derive"] }
clap_complete = "4.5.14"
serde = { version = "1.0.188", features = ["serde_derive"] }

[features]
default = ["embed_modules"]
completions = []
embed_modules = ["dynisland_clock_module", "dynisland_dynamic_layoutmanager", "dynisland_music_module", "dynisland_script_module"]

