[workspace]

members = [
    "dynisland-abi",
    "dynisland-core",
    "dynisland-macro",
    "dynisland-modules/[!.]*",
]
exclude = ["dynisland-modules/dynisland-module-template"]
# exclude = ["dynisland-modules/dynisland-module-template", "dynisland-modules/clock-module", "dynisland-modules/example-module", "dynisland-modules/music-module", "dynisland-modules/script-module"]

[workspace.dependencies]
dynisland-core = { path="./dynisland-core", version="=0.1.3" }
dynisland-macro = { path="./dynisland-macro", version="=0.1.0" }
dynisland-abi = { path="./dynisland-abi", version="=0.1.3" }

[profile.release]
strip = false
opt-level = "z"
lto=true

[package]
name = "dynisland"
version = "0.1.3"
authors = ["cr3eperall"]
description = "A Dynamic Island bar"
license = "MIT"
repository = "https://github.com/cr3eperall/dynisland"
edition = "2021"
build = "build.rs"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dynisland-core = { workspace=true, version="=0.1.3" }
json-strip-comments = "1.0.4"
serde_json = "1.0.127"
gtk = { version = "0.8.2", package = "gtk4", features = ["v4_12"] }
linkme = { version = "0.3.17" }
tokio = { version = "1.46.0", features = ["rt", "time", "sync", "macros", "io-util", "net"] }
anyhow = "1.0.86"
serde = { version = "1.0.188", features = ["serde_derive"] }
env_logger = "0.11.8"
abi_stable = "0.11.3"
grass={version = "0.13.4", default-features = false, features = ["macro"]}

notify = { version = "8.0.0", features = ["fsevent-sys"] }
# colored = "2.1.0"
clap = { version = "4.5.15", features = ["derive"]}
nix = { version = "0.30.1", features = ["process", "fs"]}
bincode = { version = "2.0.1"}

dynisland_clock_module = { path="./dynisland-modules/clock-module", version="0.1.1", features = ["embedded"], optional = true}
dynisland_dynamic_layoutmanager ={ path="./dynisland-modules/dynamic-layout", version="0.1.1", features = ["embedded"], optional = true}
dynisland_music_module = { path="./dynisland-modules/music-module", version="0.1.2", features = ["embedded"], optional = true}
dynisland_script_module = { path="./dynisland-modules/script-module", version="0.1.1", features = ["embedded"], optional = true}
dynisland_systray_module = { path="./dynisland-modules/systray-module", version="0.1.0", features = ["embedded"], optional = true}

[build-dependencies]
clap = {version = "4.5.15", features = ["derive"] }
clap_complete = "4.5.54"
serde = { version = "1.0.188", features = ["serde_derive"] }

[features]
default = ["embed_modules"]
completions = []
embed_modules = ["dynisland_clock_module", "dynisland_dynamic_layoutmanager", "dynisland_music_module", "dynisland_script_module", "dynisland_systray_module"]

