[package]
name = "dynisland-abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { workspace = true }
gdk = { workspace = true }
glib = { workspace = true }
glib-macros = { workspace = true }
abi_stable = { workspace = true }
