[package]
name = "dynisland-core"
version = "0.1.0"
authors = ["cr3eperall"]
description = "Common logic and widgets for dynisland modules and layout managers"
license = "MIT"
repository = "https://github.com/cr3eperall/dynisland"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dynisland-abi = { version="0.1.0" }

anyhow = { workspace = true }
gtk = { workspace = true }
gdk = { workspace = true }
glib = { workspace = true }
glib-macros = { workspace = true }
tokio = { workspace = true, features = ["rt", "time", "sync", "macros"] }
serde = { workspace = true, features = ["serde_derive"] }
log = { workspace = true }
ron = { workspace = true }
abi_stable = { workspace = true }


# gtk-layer-shell = { version = "0.2.0", package = "gtk4-layer-shell" }
clap = { version = "4.4.1", features = ["derive"] }
dyn-clone = "1.0.13"
rand = "0.8.5"
notify = { version = "6.1.1", features = ["fsevent-sys"] }
concat-idents = "1.1.5"
const-random = "0.1.17"
# css-anim = {path = "../../css-anim", version = "*"}
