[package]
name = "dynisland-modules"
version = "0.1.0"
edition = "2021"
license = "mit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynisland-core = { path = "../dynisland-core"}
anyhow = {workspace = true}
gtk = {workspace = true}
gdk = {workspace = true}
glib = {workspace = true}
glib-macros = {workspace = true}
tokio = { workspace = true, features = ["rt", "time", "sync", "macros"] }
serde = { workspace = true, features = ["serde_derive"] }
log = {workspace = true}
ron = {workspace = true}
linkme = {workspace = true}

css-anim = {path = "../../css-anim", version = "*"}

dyn-clone = "1.0.13"
async-trait = "0.1.73"
# env_logger = "0.10.1"