[package]
name = "dynisland"
version = "0.1.1"
authors = ["cr3eperall"]
description = "A Dynamic Island bar"
license = "MIT"
repository = "https://github.com/cr3eperall/dynisland"
edition = "2021"
build = "build.rs"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dynisland-core = { version = "0.1.0" }
dynisland-abi = { version = "0.1.0" }
# dynisland-modules = { path = "../dynisland-modules"}

anyhow = { workspace = true }
gtk = { workspace = true }
gtk-layer-shell = { workspace = true }
gdk = { workspace = true }
glib = { workspace = true }
tokio = { workspace = true, features = ["rt", "time", "sync", "macros", "io-util", "net"] }
serde = { workspace = true, features = ["serde_derive"] }
log = { workspace = true }
ron = { workspace = true }
linkme = { workspace = true }
abi_stable = { workspace = true }
env_logger = { workspace = true }
grass = { workspace = true }                               #scss parsing


notify = { version = "6.1.1", features = ["fsevent-sys"] }
colored = "2.1.0"
clap = { version = "4.5.15", features = ["derive"]}
nix = { version = "0.29.0", features = ["process", "fs"]}
bincode = { version = "1.3.3"}

[build-dependencies]
clap = {version = "4.5.15", features = ["derive"] }
clap_complete = "4.5.14"
serde = { workspace = true, features = ["serde_derive"] }

[features]
completions =[]

