[package]
name = "example-module"
version = "0.1.0"
edition = "2021"
license = "mit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dynisland-core = { path = "../../dynisland-core" }
dynisland-abi = { path = "../../dynisland-abi" }

anyhow = { workspace = true }
gtk = { workspace = true, features = ["unsafe-assume-initialized"] }
gdk = { workspace = true }
glib = { workspace = true }
glib-macros = { workspace = true }
tokio = { workspace = true, features = ["rt", "time", "sync", "macros"] }
serde = { workspace = true, features = ["serde_derive"] }
ron = { workspace = true }
abi_stable = { workspace = true }
grass = { workspace = true }

log = { workspace = true }
env_logger = { workspace = true }

[lib]
name = "example_module"
crate-type = ["cdylib", 'rlib']
